Javascript függvények létrehozása - szsz. ellen.

--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
             </div>
             <div class="flex">
                 <p id="m">Vendégek életkora:</p>
-                <input type="number" name="" id="">
+                <input oninput="vendegEletkorAllitas(this)" type="number" name="" id="v1">
                 <p>év</p>
-                <input type="number" name="" id="">
+                <input oninput="vendegEletkorAllitas(this)" type="number" name="" id="v2">
                 <p>év</p>
-                <input type="number" name="" id="">
+                <input oninput="vendegEletkorAllitas(this)" type="number" name="" id="v3">
                 <p>év</p>
-                <input type="number" name="" id="">
+                <input oninput="vendegEletkorAllitas(this)" type="number" name="" id="v4">
                 <p>év</p>
+                <p id="hiba">A minimum korhatár <br> pótágy igényléséhez: 16</p>
             </div>
             <hr>
             <div class="flex">
