--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <p>Kedves Vendégünk!</p>
         <p>Tájékoztatjuk a sikeres foglalásról.</p>
         <br>
-        <p>Érkezés: </p>
-        <p>Távozás: </p>
-        <p>Szoba típusa: </p>
-        <p>Vendégek száma: fő</p>
-        <p>Ellátás: </p>
-        <p>Igényelt szolgáltatások: </p>
-        <p>A teljes összeg: Ft</p>
+        <p>Érkezés:  <span id="erkezesVeg"></span> </p>
+        <p>Távozás:  <span id="tavozasVeg"></span> </p>
+        <p>Szoba típusa: <span id="szobaVeg"></span> </p>
+        <p>Vendégek száma: <span id="vendegekVeg"></span> fő</p>
+        <p>Ellátás: <span id="ellatasVeg"></span> </p>
+        <p>Igényelt szolgáltatások: <span id="igenyeltSzolgVeg"></span> </p>
+        <p>A teljes összeg: <span id="osszegVeg"></span> Ft</p>
         <br>
         <p>Köszönjük a megrendelését!</p>
     </div>
@@ -30,11 +30,11 @@
             <hr>
             <div class="flex">
                 <p>Érkezés dátuma:</p>
-                <input type="date">
+                <input id="erkezes" type="date">
             </div>
             <div class="flex">
                 <p>Távozás dátuma:</p>
-                <input type="date">
+                <input id="tavozas" type="date">
             </div>
             <hr>
             <div class="flex">
