Végösszeg kiszámítása, modal megjelenítése

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Szoba típusa: <span id="szobaVeg"></span> </p>
         <p>Vendégek száma: <span id="vendegekVeg"></span> fő</p>
         <p>Ellátás: <span id="ellatasVeg"></span> </p>
-        <p>Igényelt szolgáltatások: <span id="igenyeltSzolgVeg"></span> </p>
+        <p>Igényelt szolgáltatások: <ul id="igenyeltSzolgVeg"></ul> </p>
         <p>A teljes összeg: <span id="osszegVeg"></span> Ft</p>
         <br>
         <p>Köszönjük a megrendelését!</p>
