--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <hr>
             <div class="flex" style="justify-content: left;">
                 <p id="m">Vendégek száma:</p>
-                <input value="2" type="number" name="" id="vendegekSzama">
+                <input min="1" max="4" value="2" type="number" name="" id="vendegekSzama">
                 <p>fő</p>
             </div>
             <div class="flex">
